Allow attached metacard.xml (#72)
